# label-pad

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: font_size_reference.py
src/label_pad/: __init__.py  app.py  canvas.py  canvas_editor.py  canvas_geometry.py  canvas_hit_testing.py  canvas_objects.py  main_window.py  model.py  pdf_export.py  printing.py  profiles.py  renderer.py  text_fonts.py  text_layout.py
tests/: test_canvas.py  test_main_window.py  test_model.py  test_pdf_export.py  test_printing.py  test_profiles.py  test_renderer.py
