[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "label-pad"
version = "0.1.0"
description = "Label layout and printing utility"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10",
    "PySide6>=6.7",
    "PyYAML>=6",
    "reportlab>=4",
]

[project.optional-dependencies]
dev = [
    "black>=24",
    "pytest>=8",
    "ruff>=0.5",
]

[project.scripts]
label-pad = "label_pad.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
